// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostCounts - Snapshots > matches snapshot with counts data 1`] = `
<div
  class="flex flex-row gap-2"
  data-testid="container"
>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      5
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-message-circle h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      10
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-refresh-cw h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
      />
      <path
        d="M21 3v5h-5"
      />
      <path
        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
      />
      <path
        d="M8 16H3v5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      2
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bookmark h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
      />
    </svg>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-ellipsis h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </svg>
  </button>
</div>
`;

exports[`SinglePostCounts - Snapshots > matches snapshot with different postId 1`] = `
<div
  class="flex flex-row gap-2"
  data-testid="container"
>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      1
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-message-circle h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      1
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-refresh-cw h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
      />
      <path
        d="M21 3v5h-5"
      />
      <path
        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
      />
      <path
        d="M8 16H3v5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      1
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bookmark h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
      />
    </svg>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-ellipsis h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </svg>
  </button>
</div>
`;

exports[`SinglePostCounts - Snapshots > matches snapshot with large counts 1`] = `
<div
  class="flex flex-row gap-2"
  data-testid="container"
>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      999
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-message-circle h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      1000
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-refresh-cw h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
      />
      <path
        d="M21 3v5h-5"
      />
      <path
        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
      />
      <path
        d="M8 16H3v5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      500
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bookmark h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
      />
    </svg>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-ellipsis h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </svg>
  </button>
</div>
`;

exports[`SinglePostCounts - Snapshots > matches snapshot with zero counts 1`] = `
<div
  class="flex flex-row gap-2"
  data-testid="container"
>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      0
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-message-circle h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      0
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-refresh-cw h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
      />
      <path
        d="M21 3v5h-5"
      />
      <path
        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
      />
      <path
        d="M8 16H3v5"
      />
    </svg>
    <span
      data-size="sm"
      data-testid="typography"
    >
      0
    </span>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bookmark h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
      />
    </svg>
  </button>
  <button
    class="flex items-center gap-1"
    data-size="sm"
    data-testid="button"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-ellipsis h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </svg>
  </button>
</div>
`;
